--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,20 @@
             <name>jcenter</name>
             <url>http://oss.jfrog.org/artifactory/oss-snapshot-local/</url>
         </repository>
+        <repository>
+            <id>miredot</id>
+            <name>MireDot Releases</name>
+            <url>http://nexus.qmino.com/content/repositories/miredot</url>
+        </repository>
     </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>miredot</id>
+            <name>MireDot Releases</name>
+            <url>http://nexus.qmino.com/content/repositories/miredot</url>
+        </pluginRepository>
+    </pluginRepositories>
 
     <dependencies>
         <dependency>
@@ -27,6 +40,11 @@
             <artifactId>tomcat-servlet-api</artifactId>
             <version>7.0.55</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.qmino</groupId>
+            <artifactId>miredot-annotations</artifactId>
+            <version>1.3.1</version>
         </dependency>
         <dependency>
             <groupId>com.sun.mail</groupId>
@@ -263,6 +281,30 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.qmino</groupId>
+                <artifactId>miredot-plugin</artifactId>
+                <version>1.6.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>restdoc</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <licence>UHJvamVjdHxjb20uZ2l0aHViLmhyb25vbS50ZXN0LXNwcmluZy1tdmN8MjAxNy0wNC0wNHx0cnVlI01Dd0NGSHRDeUVDcW16SjFiUCtYTDlTL1o3ckxxd3FiQWhSWWhtbUt5VUxTZExQc0I4aHp6c29jL0JURDVBPT0=</licence>
+                    <restModel>
+                        <restFramework>
+                            <name>spring-mvc</name>
+                        </restFramework>
+                    </restModel>
+                    <output>
+                        <title>test-spring-mvc v${project.version}</title>
+                    </output>
+                    <!-- insert other configuration here (optional) -->
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
